--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,21 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+        username: goutamtak
+        password: rockonjasmin
 
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: GOUTAMTAK/ragModelImage:latest
+        tags: goutamtak/ragModelImage:latest
+        context: .
+        file: ./Dockerfile
+        
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: goutamtak/ragModelImage:latest
         context: .
         file: ./Dockerfile
