--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,13 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: goutamtak
-        password: rockonjasmin
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: goutamtak/ragmodelimage:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/text2sqlimage:latest
         context: .
         file: ./Dockerfile
